package ISP.Interface;

public interface ICircle {
  String drawCircle();
}
